Attempt p7 in Java (final)