@@ -1,5 +1,6 @@
 package euler.lib;
 
+import java.util.Arrays;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.Iterator;
@@ -106,7 +107,7 @@ public class Primes {
     }
 
     private static class PrimeGeneratorIterator implements Iterator<Long> {
-        private final List<Long> initialPrimes = List.of(2L, 3L, 5L);
+        private final List<Long> initialPrimes = Arrays.asList(2L, 3L, 5L);
         private final Map<Long, Long> sieve = new HashMap<>();
         private Iterator<Long> recursivePrimes;
         private long currentPrime;
